# learning-opengl-cpp

./: .gitignore  .rgignore  CMakeLists.txt
include/glad/: glad.h
res/shaders/default/: fragment.frag  vertex.vert
res/shaders/test/: fragment.frag
shaders/default/: fragment.glsl  vertex.glsl
src/: main.cpp
src/buffer/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/config/: constants.h
src/renderer/: renderer.cpp  renderer.h  utils.h
src/shader/: shader.cpp  shader.h
src/tests/: buffer_test.cpp  buffer_test.h  clear_color_test.cpp  clear_color_test.h  test.h  test_manager.cpp  test_manager.h  texture_2d_test.cpp  texture_2d_test.h
src/texture/: texture_2d.cpp  texture_2d.h
src/utils/: R.h
